--- a/sketchbook_settings.json
+++ b/sketchbook_settings.json
@@ -2,5 +2,6 @@
   "icon_path": "assets/icons/Heart Icon - Improved alpha.ico",
   "last_dir_icon": "assets/icons",
   "bullet_icon_path": "assets/icons/Heart Icon - Improved alpha.ico",
-  "last_dir_bullet": "assets/icons"
+  "last_dir_bullet": "assets/icons",
+  "last_dir_upload": "C:/Users/thisg/Desktop/Trello Cushions"
 }
